add images and posts

--- a/mine-site/posts/2020-09-28-19.36.28.md
+++ b/mine-site/posts/2020-09-28-19.36.28.md
@@ -1,6 +1,6 @@
 ---
-title: 堡垒遗迹
-pos: -174 33 -414
+title: 2020-09-28_19.36.28
+pos: -174.063 33.00000 -414.98
 world: minecraft:the_nether
 cover: /images/2020-09-28_19.36.28.png
 ---
