--- a/mine-site/posts/2020-09-30-14.02.01.md
+++ b/mine-site/posts/2020-09-30-14.02.01.md
@@ -1,6 +1,6 @@
 ---
-title: 传送门一
-pos: -120 29 -610
+title: 2020-09-30_14.02.01
+pos: -120.710 29.00000 -610.68
 world: minecraft:overworld
 cover: /images/2020-09-30_14.02.01.png
 ---
