--- a/mine-site/posts/2020-09-30-14.07.45.md
+++ b/mine-site/posts/2020-09-30-14.07.45.md
@@ -1,6 +1,6 @@
 ---
-title: 传送门一露天入口
-pos: -122 69 -611
+title: 2020-09-30_14.07.45
+pos: -122.472 69.00000 -611.03
 world: minecraft:overworld
 cover: /images/2020-09-30_14.07.45.png
 ---
