--- a/mine-site/posts/2020-09-30-14.14.39.md
+++ b/mine-site/posts/2020-09-30-14.14.39.md
@@ -1,6 +1,6 @@
 ---
-title: zhouyuyu家的床
-pos: -61 64 -122
+title: 2020-09-30_14.14.39
+pos: -61.500 64.56250 -122.50
 world: minecraft:overworld
 cover: /images/2020-09-30_14.14.39.png
 ---
