--- a/mine-site/posts/2020-09-30-15.07.38.md
+++ b/mine-site/posts/2020-09-30-15.07.38.md
@@ -1,6 +1,6 @@
 ---
-title: zhouyuyu家走廊
-pos: -65 64 -116
+title: 2020-09-30_15.07.38
+pos: -65.175 64.00000 -116.24
 world: minecraft:overworld
 cover: /images/2020-09-30_15.07.38.png
 ---
