--- a/mine-site/posts/2020-09-30-15.32.53.md
+++ b/mine-site/posts/2020-09-30-15.32.53.md
@@ -1,6 +1,6 @@
 ---
-title: 下界工作室一
-pos: -13 34 -72
+title: 2020-09-30_15.32.53
+pos: -13.837 34.00000 -72.50
 world: minecraft:the_nether
 cover: /images/2020-09-30_15.32.53.png
 ---
