--- a/mine-site/posts/2020-10-01-16.05.41.md
+++ b/mine-site/posts/2020-10-01-16.05.41.md
@@ -1,6 +1,6 @@
 ---
-title: 湿地一
-pos: -21 64 -823
+title: 2020-10-01_16.05.41
+pos: -21.394 64.00000 -823.03
 world: minecraft:overworld
 cover: /images/2020-10-01_16.05.41.png
 ---
