--- a/mine-site/posts/2020-10-01-16.21.22.md
+++ b/mine-site/posts/2020-10-01-16.21.22.md
@@ -1,6 +1,6 @@
 ---
-title: 村庄一
-pos: 26 77 -397
+title: 2020-10-01_16.21.22
+pos: 26.502 77.93750 -397.63
 world: minecraft:overworld
 cover: /images/2020-10-01_16.21.22.png
 ---
