--- a/mine-site/posts/2020-10-02-20.27.52.md
+++ b/mine-site/posts/2020-10-02-20.27.52.md
@@ -1,6 +1,6 @@
 ---
-title: 僵尸刷怪箱一
-pos: -63 30 -437
+title: 2020-10-02_20.27.52
+pos: -63.430 30.00000 -436.68
 world: minecraft:overworld
 cover: /images/2020-10-02_20.27.52.png
 ---
