--- a/mine-site/posts/2020-10-02-20.36.05.md
+++ b/mine-site/posts/2020-10-02-20.36.05.md
@@ -1,6 +1,6 @@
 ---
-title: 君哥基地一
-pos: -232 5 -482
+title: 2020-10-02_20.36.05
+pos: -232.392 5.00000 -482.99
 world: minecraft:overworld
 cover: /images/2020-10-02_20.36.05.png
 ---
