--- a/mine-site/posts/2020-10-03-20.40.10.md
+++ b/mine-site/posts/2020-10-03-20.40.10.md
@@ -1,6 +1,6 @@
 ---
-title: 下界要塞（传送门） 一
-pos: -171 38 -822
+title: 2020-10-03_20.40.10
+pos: -171.412 38.00000 -822.38
 world: minecraft:the_nether
 cover: /images/2020-10-03_20.40.10.png
 ---
