--- a/mine-site/posts/2020-10-03-20.51.17.md
+++ b/mine-site/posts/2020-10-03-20.51.17.md
@@ -1,6 +1,6 @@
 ---
-title: 最远的下界传送门
-pos: -141 34 -1043
+title: 2020-10-03_20.51.17
+pos: -141.593 34.00000 -1043.82
 world: minecraft:the_nether
 cover: /images/2020-10-03_20.51.17.png
 ---
