--- a/mine-site/posts/2020-09-30-14.10.09.md
+++ b/mine-site/posts/2020-09-30-14.10.09.md
@@ -1,6 +1,6 @@
 ---
-title: 传送门二露天入口
-pos: -245 68 -531
+title: 2020-09-30_14.10.09
+pos: -245.354 68.00000 -531.82
 world: minecraft:overworld
 cover: /images/2020-09-30_14.10.09.png
 ---
