--- a/mine-site/posts/2020-10-03-20.51.51.md
+++ b/mine-site/posts/2020-10-03-20.51.51.md
@@ -1,6 +1,6 @@
 ---
-title: 主世界最远的地方
-pos: -1128 79 -8345
+title: 2020-10-03_20.51.51
+pos: -1128.859 79.00000 -8345.72
 world: minecraft:overworld
 cover: /images/2020-10-03_20.51.51.png
 ---
